# clawguard

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
clawguard/: __init__.py  cli.py  models.py  reporter.py  scanner.py  utils.py
clawguard/checkers/: __init__.py  base.py  config_checker.py  dependency_checker.py  permission_checker.py
tests/: test_cli.py  test_config_checker.py  test_dependency_checker.py  test_permission_checker.py  test_reporter.py  test_scanner.py
