[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clawguard"
version = "0.3.0"
description = "Security audit and vulnerability scanner for OpenClaw AI API Gateway deployments"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "OpenClaw Labs", email = "openclaw-labs@hidearmoon.dev" }
]
keywords = [
    "openclaw", "security", "audit", "vulnerability-scanner",
    "ai-gateway", "api-security", "devsecops"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "anyio>=4.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "packaging>=24.0",
    "PyYAML>=6.0",
    "cvss>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "respx>=0.21.0",
]

[project.scripts]
clawguard = "clawguard.cli:app"

[project.urls]
Homepage = "https://github.com/hidearmoon/clawguard"
Repository = "https://github.com/hidearmoon/clawguard"
"Bug Tracker" = "https://github.com/hidearmoon/clawguard/issues"
Documentation = "https://github.com/hidearmoon/clawguard#readme"

[tool.hatch.build.targets.wheel]
packages = ["clawguard"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
